<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
         <properties>
                  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                  <maven.compiler.target>1.8</maven.compiler.target>
                  <maven.compiler.source>1.8</maven.compiler.source>
         </properties>

         <modelVersion>4.0.0</modelVersion>
         <groupId>edu.csu2017fa314.T29</groupId>
         <artifactId>T29</artifactId>
         <packaging>jar</packaging>
         <version>4.0.0</version>
         <name>T29</name>
         <url>https://github.com/csu2017fa314/T29/</url>
         <build>
                  <plugins>
                           <plugin>
                                    <groupId>org.apache.maven.plugins</groupId>
                                    <artifactId>maven-jar-plugin</artifactId>
                                    <version>3.0.2</version>
                                    <configuration>
                                             <archive>
                                                      <manifest>
                                                               <addClasspath>true</addClasspath>
                                                               <mainClass>edu.csu2017fa314.T29</mainClass>
                                                      </manifest>
                                             </archive>
                                    </configuration>
                           </plugin>

                      <plugin>
                          <groupId>org.apache.maven.plugins</groupId>
                          <artifactId>maven-shade-plugin</artifactId>
                          <version>1.6</version>
                          <executions>
                              <execution>
                                  <phase>package</phase>
                                  <goals>
                                      <goal>shade</goal>
                                  </goals>
                              </execution>
                          </executions>
                      </plugin>
                  </plugins>
         </build>
         <dependencies>
                  <dependency>
                           <groupId>junit</groupId>
                           <artifactId>junit</artifactId>
                           <version>4.11</version>
                           <scope>test</scope>
                  </dependency>
             <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
             <dependency>
                 <groupId>com.googlecode.json-simple</groupId>
                 <artifactId>json-simple</artifactId>
                 <version>1.1.1</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.8.1</version>
             </dependency>
             <dependency>
                 <groupId>com.sparkjava</groupId>
                 <artifactId>spark-core</artifactId>
                 <version>2.5.5</version>
             </dependency>

             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>20160810</version>
             </dependency>

             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.5</version>
             </dependency>

             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>1.6.4</version>
             </dependency>

             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.17</version>
                 <type>jar</type>
                 <scope>compile</scope>
             </dependency>

         </dependencies>
    </project>
